--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
-    "react": "^16.9.0",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -31,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react": "^16.8.6"
   }
 }
