--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
       "resolved": "https://registry.npmjs.org/cookie/-/cookie-0.4.0.tgz",
       "version": "0.4.0"
     },
+    "cookie-parser": "^1.4.4",
     "cookie-signature": {
       "integrity": "sha1-4wOogrNCzD7oylE6eZmXNNqzriw=",
       "resolved": "https://registry.npmjs.org/cookie-signature/-/cookie-signature-1.0.6.tgz",
@@ -193,6 +194,7 @@
       "resolved": "https://registry.npmjs.org/negotiator/-/negotiator-0.6.2.tgz",
       "version": "0.6.2"
     },
+    "nodemailer": "^6.3.0",
     "nodemodule": {
       "integrity": "sha1-e3XaP8q0RC1SbauC5VYq9CBjyD0=",
       "resolved": "https://registry.npmjs.org/nodemodule/-/nodemodule-0.3.0.tgz",
