--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "crypto-js": "^3.1.9-1",
     "node-sass": "^4.12.0",
+    "nodemailer": "^6.3.0",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
