--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-toast-notifications": "^2.4.0",
     "set-cookie-parser": "^2.4.0",
     "socket.io-client": "^2.3.0",
     "universal-cookie": "^4.0.2"
