--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-toast-notifications": "^2.4.0",
     "set-cookie-parser": "^2.4.0",
     "socket.io-client": "^2.3.0",
-    "universal-cookie": "^4.0.2"
+    "universal-cookie": "^4.0.2",
+    "use-position": "0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
