--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
+    "geolib": "^3.1.0",
     "node-sass": "^4.12.0",
     "nodemailer": "^6.3.0",
     "rc-slider": "^8.7.1",
