--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.0",
     "rc-slider": "^8.7.1",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
+    "react-moment": "^0.9.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toast-notifications": "^2.4.0",
