--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
     "geolib": "^3.1.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.0",
     "rc-slider": "^8.7.1",
     "react-awesome-slider": "^2.2.1",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toast-notifications": "^2.4.0",
