--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma-badge": "^3.0.1",
     "crypto-js": "^3.1.9-1",
     "geolib": "^3.1.0",
     "moment": "^2.24.0",
