--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "rc-slider": "^8.7.1",
     "react-awesome-slider": "^2.2.1",
     "react-bulma-components": "^2.3.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
