--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bulma-badge": "^3.0.1",
     "crypto-js": "^3.1.9-1",
+    "date-fns": "^2.8.1",
     "geolib": "^3.1.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
